--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       align-items: center;
       padding: 1rem 2rem;
       background: var(--glass);
-      backdrop-filter: var(--blur);
       position: sticky;
       top: 0;
+      backdrop-filter: var(--blur);
       z-index: 100;
     }
     nav a {
@@ -50,7 +50,7 @@
 
     .section { padding: 2rem; max-width: 900px; margin: auto; }
 
-    /* GLASS CARD */
+    /* ARTICLE CARD */
     .article {
       background: var(--glass);
       backdrop-filter: var(--blur);
@@ -59,86 +59,91 @@
       border-radius: 16px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.1);
     }
-
     .article-img {
       width: 100%;
       max-height: 450px;
       object-fit: cover;
       border-radius: 12px;
       margin-bottom: 10px;
-      transition: 0.3s;
     }
-    .article-img:hover { transform: scale(1.03); }
 
-    .photo-credit { font-size: 0.85rem; font-style: italic; color: #444; }
-
-    .read-more { max-height: 0; overflow: hidden; transition: max-height 0.5s ease; }
-    .read-btn {
-      display: inline-block;
-      padding: 8px 12px;
-      margin-top: 10px;
-      background: var(--accent);
-      color: white;
-      border-radius: 6px;
-      border: none;
-      cursor: pointer;
-      font-size: 0.9rem;
+    .photo-credit {
+      font-size: 0.85rem;
+      color: #555;
+      font-style: italic;
+      margin-bottom: 1rem;
     }
-    .read-btn:hover { background: var(--accent-dark); }
 
     .badge {
       display: inline-block;
-      padding: 4px 10px;
       background: var(--accent-dark);
       color: white;
+      padding: 4px 10px;
       border-radius: 4px;
       font-size: 0.8rem;
       margin-bottom: 10px;
     }
 
-    a { color: var(--accent-dark); text-decoration: none; }
-    a:hover { text-decoration: underline; }
-
-    .pdf-button {
-      display: inline-block;
+    /* READ MORE */
+    .read-more {
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.5s ease;
+    }
+    .read-btn {
       padding: 8px 14px;
       background: var(--accent);
       color: #fff;
+      border: none;
       border-radius: 6px;
-      text-decoration: none;
-      font-size: 0.9rem;
+      cursor: pointer;
       margin-top: 10px;
+    }
+    .read-btn:hover { background: var(--accent-dark); }
+
+    /* PDF BUTTON */
+    .pdf-button {
+      display: inline-block;
+      padding: 10px 16px;
+      background: var(--accent);
+      color: white;
+      border-radius: 6px;
+      font-size: 0.9rem;
+      text-decoration: none;
+      margin: 10px 0;
     }
     .pdf-button:hover { background: var(--accent-dark); }
 
     iframe {
-      margin-top: 15px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
       width: 100%;
+      border-radius: 10px;
+      margin-top: 1rem;
+      border: 1px solid #ccc;
     }
 
+    /* FOOTER */
     footer {
       text-align: center;
       padding: 2rem;
       background: var(--glass);
-      margin-top: 3rem;
       backdrop-filter: var(--blur);
+      margin-top: 3rem;
     }
-    footer a { color: var(--accent-dark); text-decoration: none; }
-    footer a:hover { text-decoration: underline; }
-
+    footer a { color: var(--accent-dark); }
   </style>
 
   <script>
     function toggleReadMore(id) {
       const content = document.getElementById(id);
-      content.style.maxHeight = content.style.maxHeight ? null : content.scrollHeight + 'px';
+      content.style.maxHeight =
+        content.style.maxHeight ? null : content.scrollHeight + "px";
     }
   </script>
 </head>
+
 <body>
 
+  <!-- NAVBAR -->
   <nav>
     <div><strong>Sagnik Maitra</strong></div>
     <div>
@@ -150,16 +155,19 @@
     </div>
   </nav>
 
+  <!-- HEADER -->
   <header id="home">
     <h1>Sagnik Maitra</h1>
     <p>Journalist • Reporter • Storyteller</p>
   </header>
 
+  <!-- ABOUT -->
   <section class="section" id="about">
     <h2>About Me</h2>
     <p>
-      I’m a journalism student and former intern at <strong>The Hindu, Bengaluru</strong>, <strong>News Trail</strong>, and the online news portal <strong>PMN Patralok</strong> (as entertainment journalist).  
-      I cover city, culture, gender, STEM and public-interest stories — always with a people-centric, multimedia approach.
+      I’m a journalism student and former intern at <strong>The Hindu, Bengaluru</strong>,
+      <strong>News Trail</strong>, and <strong>PMN Patralok</strong>, where I worked as an entertainment journalist.
+      My reporting covers city, culture, gender, STEM, and public-interest stories with a strong focus on people-centric storytelling.
     </p>
     <p>
       <strong>Visit my author page:</strong>
@@ -169,28 +177,100 @@
     </p>
   </section>
 
+  <!-- RESUME -->
   <section class="section" id="resume">
     <h2>Resume / CV</h2>
-    <p>You can view or download my full resume below:</p>
-    <a class="pdf-button" href="Sagnik Maitra Final Resume.pdf" download>Download My Resume (PDF)</a>
+    <p>Download or view my resume below:</p>
+
+    <a class="pdf-button" href="Sagnik Maitra Final Resume.pdf" download>
+      Download My Resume (PDF)
+    </a>
+
     <iframe src="Sagnik Maitra Final Resume.pdf" height="600px"></iframe>
   </section>
 
+  <!-- ARTICLES -->
   <section class="section" id="articles">
     <h2>Published Work</h2>
 
-    <!-- Example The Hindu / other articles here ... -->
+    <!-- Article 1 -->
+    <div class="article">
+      <span class="badge">Politics / Governance</span>
+      <img src="first.jpeg" class="article-img">
+      <p class="photo-credit">Photo Credit: Sagnik Maitra</p>
 
-    <!-- External Publications — Patralok -->
-    <h3>External Publications — Patralok</h3>
+      <h3>
+        <a href="https://www.thehindu.com/news/national/karnataka/karnataka-cm-promises-dedicated-msme-department-to-promote-small-industries/article69588531.ece" target="_blank">
+          Karnataka CM promises dedicated MSME department
+        </a>
+      </h3>
+
+      <div class="read-more" id="read1">
+        <p><strong>Abstract:</strong> Announcement of a new MSME-focused department to boost small-scale industries in Karnataka.</p>
+      </div>
+      <button class="read-btn" onclick="toggleReadMore('read1')">Read More</button>
+    </div>
+
+    <!-- Article 2 -->
+    <div class="article">
+      <span class="badge">City / Labour</span>
+      <img src="second.jpeg" class="article-img">
+      <p class="photo-credit">Photo Credit: K. Murali Kumar</p>
+
+      <h3>
+        <a href="https://www.thehindu.com/news/national/karnataka/delivery-agents-continue-to-brave-bengalurus-monsoon-without-safety-nets/article69605132.ece" target="_blank">
+          Delivery agents brave Bengaluru’s monsoon without safety nets
+        </a>
+      </h3>
+
+      <div class="read-more" id="read2">
+        <p><strong>Abstract:</strong> Gig-economy workers face safety risks, long hours, and lack of support during monsoon season.</p>
+      </div>
+      <button class="read-btn" onclick="toggleReadMore('read2')">Read More</button>
+    </div>
+
+    <!-- Article 3 -->
+    <div class="article">
+      <span class="badge">Accessibility / Public Spaces</span>
+      <img src="third.jpeg" class="article-img">
+      <p class="photo-credit">Photo Credit: Sudhakara Jain</p>
+
+      <h3>
+        <a href="https://www.thehindu.com/news/cities/bangalore/disabled-toilets-not-so-accessible-in-public-spaces-of-bengaluru/article69697454.ece" target="_blank">
+          ‘Disabled toilets’ not so accessible in Bengaluru
+        </a>
+      </h3>
+
+      <div class="read-more" id="read3">
+        <p><strong>Abstract:</strong> A ground report revealing major accessibility gaps in Bengaluru’s public toilet infrastructure.</p>
+      </div>
+      <button class="read-btn" onclick="toggleReadMore('read3')">Read More</button>
+    </div>
+
+    <!-- Article 4: STEM -->
+    <div class="article">
+      <span class="badge">Women / STEM / Culture</span>
+      <img src="stem  (1).jpg" class="article-img">
+      <p class="photo-credit">Newspaper clipping of article ‘STEM has no gender’</p>
+
+      <h3>STEM has no gender: Docu sparks dialogue</h3>
+
+      <p><strong>Abstract:</strong> Reporting on the screening of the Slovenian documentary <i>Flow (Tok)</i> and a panel on women in STEM fields.</p>
+
+      <a class="pdf-button" href="stem.pdf" download>Download PDF</a>
+      <iframe src="stem.pdf" height="600px"></iframe>
+    </div>
+
+    <!-- PATRALOK ARTICLES -->
+    <h2>External Publications — Patralok</h2>
 
     <div class="article">
       <span class="badge">Entertainment</span>
-      <h3><a href="https://www.patralok.com/ashish-chanchlani-goes-behind-the-camera-in-spooky-crazy-debut/" target="_blank">Ashish Chanchlani Goes Behind the Camera in Spooky-Crazy Debut</a></h3>
+      <h3><a href="https://www.patralok.com/ashish-chanchlani-goes-behind-the-camera-in-spooky-crazy-debut/" target="_blank">Ashish Chanchlani Goes Behind the Camera</a></h3>
     </div>
 
     <div class="article">
-      <span class="badge">Entertainment</span>
+      <span class="badge">Cinema</span>
       <h3><a href="https://www.patralok.com/dhanush-aishwarya-reunite-graduation-not-separation/" target="_blank">Dhanush & Aishwarya Reunite: Graduation, Not Separation!</a></h3>
     </div>
 
@@ -210,32 +290,33 @@
     </div>
 
     <div class="article">
-      <span class="badge">Entertainment</span>
+      <span class="badge">Cinema</span>
       <h3><a href="https://www.patralok.com/prithviraj-to-direct-hrithiks-next/" target="_blank">Prithviraj to Direct Hrithik’s Next?</a></h3>
     </div>
 
     <div class="article">
-      <span class="badge">Entertainment</span>
-      <h3><a href="https://www.patralok.com/aryan-khans-bold-bollywood-debut-has-stars-buzzing-bright/" target="_blank">Aryan Khan’s Bold Bollywood Debut Has Stars Buzzing Bright</a></h3>
+      <span class="badge">Cinema</span>
+      <h3><a href="https://www.patralok.com/aryan-khans-bold-bollywood-debut-has-stars-buzzing-bright/" target="_blank">Aryan Khan’s Bold Bollywood Debut</a></h3>
+    </div>
+
+    <div class="article">
+      <span class="badge">Cinema</span>
+      <h3><a href="https://www.patralok.com/didnt-love-sweety-nushrratt-spills-sktks-secrets/" target="_blank">“Didn’t Love Sweety” — Nushrratt Spills SKTKS Secrets</a></h3>
     </div>
 
     <div class="article">
       <span class="badge">Entertainment</span>
-      <h3><a href="https://www.patralok.com/didnt-love-sweety-nushrratt-spills-sktks-secrets/" target="_blank">“Didn’t Love Sweety!” Nushrratt Spills SKTKS Secrets</a></h3>
+      <h3><a href="https://www.patralok.com/tripathi-says-no-babu-rao-to-hera-pheri-buzz/" target="_blank">Tripathi Says ‘No BaBu Rao’</a></h3>
     </div>
 
     <div class="article">
-      <span class="badge">Entertainment</span>
-      <h3><a href="https://www.patralok.com/tripathi-says-no-babu-rao-to-hera-pheri-buzz/" target="_blank">Tripathi Says ‘No BaBu Rao’ to Hera Pheri Buzz!</a></h3>
-    </div>
-
-    <div class="article">
-      <span class="badge">Entertainment</span>
+      <span class="badge">Cinema</span>
       <h3><a href="https://www.patralok.com/tovinos-narivetta-truth-guns-land-wars/" target="_blank">Tovino’s Narivetta: Truth, Guns & Land Wars</a></h3>
     </div>
 
   </section>
 
+  <!-- FOOTER -->
   <footer id="contact">
     <p>Contact: <a href="mailto:maitrarita99@gmail.com">maitrarita99@gmail.com</a></p>
     <p>
